kustomize/components/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio # Change this value to match the namespace metadata.name
spec:
  selector:
    matchLabels:
      app: minio-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio-server
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest  
        command:
        - /bin/bash
        - -c
        args: 
        - minio server /data --console-address :9090
        volumeMounts:
        - name: storage
          mountPath: "/data"
      nodeSelector:
        kubernetes.io/hostname: k3sa-ccb           
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-nfs-pvc
