kustomize/components/minio/network-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: minio
  name: minio-gui
spec:
  selector:
    app: minio-server
  ports:
    - protocol: TCP
      port: 9090
      name: http
      targetPort: 9090
  type: LoadBalancer
