kustomize/components/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: minio-dev
  name: minio
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 9090
