kustomize/components/minio/full.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: minio
  name: minio-service
spec:
  selector:
    app: minio-server
  ports:
    - protocol: TCP
      port: 9090
      name: http
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
    - host: minio.hbvu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio-server
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command:
        - /bin/bash
        - -c
        args:
        - minio server /data --console-address :9090 --address :9000
        volumeMounts:
        - name: storage
          mountPath: "/data"
      nodeSelector:
        kubernetes.io/hostname: k3sa-flb-001
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-nfs-pvc
        - name: nfs-storage
          hostPath:
            path: /var/media/minio
