kustomize/components/minio/network-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: minio
  name: minio-api
spec:
  selector:
    app: minio-server
  ports:
    - protocol: TCP
      port: 9000
      name: http
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  namespace: minio
  name: minio-gui
spec:
  selector:
    app: minio-server
  ports:
    - protocol: TCP
      port: 9090
      name: http
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress-api
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
    - host: minio-api.hbvu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-api
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress-gui
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
    - host: minio-gui.hbvu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-gui
                port:
                  number: 9090
