kustomize/components/minio/network.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: minio
  name: minio
spec:
  selector:
    app: minio-server
  ports:
    - protocol: TCP
      port: 9090
      name: http
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
    - host: minio.hbvu.local
      http:
        paths:
          - path: /           
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9090
